--- a/WolfPaw ScreenSnip/uc_CutoutHolder.resx
+++ b/WolfPaw ScreenSnip/uc_CutoutHolder.resx
@@ -127,9 +127,6 @@
         RU5ErkJggg==
 </value>
   </data>
-  <metadata name="tt_Tip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
   <data name="btn_Up.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
@@ -176,7 +173,7 @@
         hQ3WC2JNXfegB8egHhyDmoJR/0TeDLQ11Y095NFN+hiV5NvOvwjhBhGHjHNHtNXUAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="pb_btn_OriginalSize.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btn_OriginalSize.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         wwAADsMBx2+oZAAAAMNJREFUOE/tkmENAjEUgyfgDGAAA2cABSg4B+cAC1hAAyZwgRloQ5o05S2MwB8S
@@ -194,4 +191,20 @@
         AElFTkSuQmCC
 </value>
   </data>
+  <metadata name="tt_Tip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="cms_Panel.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>99, 17</value>
+  </metadata>
+  <data name="btn_CMS.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABDSURBVDhPYxgFowAMeIDYAcKkHIAMOwzE/4G4GyRACUA2
+        DIbJNhSbYWQbis8wGCbJ0BggxmYIOpYE4lEwCgYhYGAAAOphHxE0c7XIAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="t_Hide.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>207, 17</value>
+  </metadata>
 </root>
