--- a/WolfPaw ScreenSnip/Properties/Resources.resx
+++ b/WolfPaw ScreenSnip/Properties/Resources.resx
@@ -190,6 +190,9 @@
   <data name="questionmark_white" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\questionmark_white.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="resize_handle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\resize_handle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="rolldown_black" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\rolldown_black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
