--- a/WolfPaw ScreenSnip/Properties/Resources.resx
+++ b/WolfPaw ScreenSnip/Properties/Resources.resx
@@ -163,6 +163,9 @@
   <data name="histogram_dll" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\histogram_dll.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="measurebox" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\measurebox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="minimize_black" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\minimize_black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
