--- a/WolfPaw ScreenSnip/Form1.resx
+++ b/WolfPaw ScreenSnip/Form1.resx
@@ -306,4 +306,7 @@
   <metadata name="ni_Notify.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>568, 17</value>
   </metadata>
+  <metadata name="cms_Notify.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>668, 17</value>
+  </metadata>
 </root>
