--- a/WolfPaw ScreenSnip/f_Settings.resx
+++ b/WolfPaw ScreenSnip/f_Settings.resx
@@ -118,93 +118,41 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btn_CMS.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAENJREFUOE9jGAWjAAx4gNgBwqQcgAw7DMT/gbgbJEAJQDYMhsk2FJthZBuKzzAY
-        JsnQGCDGZgg6lgTiUTAKBiFgYAAA6mEfETRztcgAAAAASUVORK5CYII=
-</value>
-  </data>
-  <metadata name="tt_Tip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <data name="btn_Delete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btn_BrowseQSDir.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAJJJREFUSEvtlOEJgCAQRh2gBZqjBZqgRdqgoVqiLVqm7hEnh6Qe+S988EDO/DhO
-        MlQYxTWRWhMEXBkH8TObeD7LCIEE07mbRdyN2p2t5eqzmIXNQ9SDXqvBMIlvh0u6sMHMWGdKna40yI7E
-        hQ3WC2JNXfegB8egHhyDmoJR/0TeDLQ11Y095NFN+hiV5NvOvwjhBhGHjHNHtNXUAAAAAElFTkSuQmCC
+        wwAADsMBx2+oZAAAALFJREFUSEvtk+0JhDAQBVOADdiADdiHjdiBLVwvNmEXNuO9+RHYC/lYFYQDBwYE
+        l5eXRMPf08vROMjbEHrI1bjLRd5ilmkIrVnM7uL0TghGSydpTXjqJnnfJBdcg2DaNzkbzB1cCua5dAyp
+        zHH5WWzwR8ateqS9LfVDDJ4kDVwXI5indbUxKzPk/ZyYY57WRQhmiAYe4qfYnGdVguOR1ORHIpS7cEF4
+        LihndfsvL48RwhcvbTn7bqsKgQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="btn_OriginalSize.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAMNJREFUOE/tkmENAjEUgyfgDGAAA2cABSg4B+cAC1hAAyZwgRloQ5o05S2MwB8S
-        mnzJXfbWre+t/ZQWcAuOwHUFWbMFpVbghRcwARc3ew2ZQak0zNtRPIAHed1LQ4/lppUZ6Rqyh4q5B9pA
-        0zRjdMXv9jDlps6wQaWc/EdmVc+qQXXF03ePzyczfwFuygSsLaVNGo4MFDMHRfg9/A5J9qwa1LAh/yud
-        gde9dUP1VFJMp2vIBZ7uMKLrAHz9BDbgr6+ptTvig2oMsIbrdQAAAABJRU5ErkJggg==
-</value>
+  <data name="rtb_Explanation.Text" xml:space="preserve">
+    <value>Smoothing mode:
+	Determines the antialiasing applied to an image.
+	In order of quality (▼):
+	 • High Quality
+	 • AntiAlias
+	 • High Speed
+	 • None
+
+Interpolation mode:
+	Determines the quality of the resulting image after scaling/rotating an image.
+	In order of quality (▼):
+	 • HighQualityBicubic
+	 • HighQualityBilinear
+	 • High
+	 • Low
+	 • Bilinear
+	 • Bicubic
+	 • NearestNeighbor
+
+Pixel Offset mode:
+	Determines renedring quality of an image by specifying how pixels are offset to one another.
+	In order of quality (▼):
+	 • HighQuality
+	 • Half
+	 • HighSpeed
+	 • None</value>
   </data>
-  <data name="btn_PrecisionMovement.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAJlJREFUOE/tk9ENgCAMRBnABVzABVzAQdzADRzKJRxMe5BLFKlA+TLxJS+BBg4D
-        1X2OVTwqnESVUUxtytmJSRYRC3YR4TkZiHESBm5+FkBtCMMHpkBumv3sTlMg69f7Yt0cSHsRcN4UiLYi
-        rJkD455jvTowvjtiCtRaBhQHMjQn16qH4vW4qFQEv4JQvGT8NSnR7Op//GPFuRNT1nUazf9PRQAAAABJ
-        RU5ErkJggg==
-</value>
-  </data>
-  <data name="btn_Save.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAALBJREFUSEvtlNEJAjEQBVOAddiADViBFdiBHdiCLViDTdiFzXhvxAdLJGH3R+Tw
-        wZCEbOYIy6V9I1txFbcER7ERqZzEU3CQMWLh471mvIuUHDGHSS92XIMQcUpeEZO0vComll9eq0FmYva8
-        H8VkL+LHPxLFZ2FJz0HE7ERaXMlviLmurz6ChtG8kphCut3LItQgLYs5MMvKxTwujBTSHOYjXANTMc+m
-        G1OFH+qfdaS1BVvdcasyb3OoAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="btn_Copy.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAMVJREFUSEvtlOENgjAQRjsAc7iACziBE7gBo7iCM7gEW7iM3gt+yaW5nrFA+MOX
-        vLQp7eMKhbJXBuNcwdiiXI13wMPojpdSpUL/OXf/j6RqVxF7KYnEL4PHwQ08FyMMixCBJtdiFmsO42Iy
-        RiMMF6iGVtwM5WQgvH9bH4pIxUyIIimPSDvz6RL7SpGyi1XEvChEnvosd4kZo9Is+4nZJpM8jC0SRz8c
-        4IzSZknFrbBoMzFHzO+iJv3yWmEB8l80/xVHtkgpH3a1Um5Ys6UiAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="btn_Up.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAOFJREFUOE/tklENAjEQRCsAAxjAAAZQgAIc4AALWEADJnCBGdhX8pJNaXvhgw8S
-        Jplcu93OzW63/CxWwUPwFnwkXoK74EfYBFuhlgjz00WQ5CVEsxtdZ9FFnIOK6YDv8bWsoAJF9wRGWAdN
-        ZA0Qs3x+JhAidq+7AUyylCwms6gxK3kDZZFgeXyvQS/ihr199Wxbdx20gsKLbVz3Q0EOSCAxoyeY+z2F
-        SXlceoL0mVjuaRd5ziyFMWHty9saaGwKZxHiDgEc8+VhPJvOYIvstCWiw4eYgfnCxSlIz3T6x1dRyhPd
-        OFliES6lHQAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btn_Down.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAN5JREFUOE/tklENAkEMBVcABjCAAQygAAU4wAEWsIAGTOACM9AhmaRprnfwwQcJ
-        k7zA9bpv217Hz7IKHUK30CPpEtqFPmITqkZVGHPpIiR5CNNcjVVn00XOIc2s4Bi6hjSnA033BDrWIRP5
-        L5gRw1gwInZ/PTWYVFuZMgRiqJ0lB/JBWtuG/ECMg2er9yJik1RDK67iIvCi1pAXJJAo1VSzPO9ZTMrr
-        oqlmwJyJMYZZ8p7lVvLgHQ3K29DiLiIGjwEV88ua+I7K3yZXWoVp+yHmoE2qOIWYmZX++SpjPAFmg1l8
-        iow9vAAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btn_FitSize.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAJtJREFUOE/tktEJwzAMBb1GF+gCWaATdJHuliUyWKqjeUYYOTa2P3vwQAj5iERS
-        B48rS3hazivUU3jZEunHslsko6Y3jYRDsNLrV2YiITPN9XUzVvNEQp2iKpVsJKGUFaLhnpQnyrwtDByW
-        zUUPfY8Zery5hYHy15DQw0xTViMSDsFt+BIJqav36kE39RleU3jptEwgWib70yKlL0INSfGlr+l2AAAA
-        AElFTkSuQmCC
-</value>
-  </data>
-  <metadata name="cms_Panel.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>99, 17</value>
-  </metadata>
-  <metadata name="t_Hide.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>207, 17</value>
-  </metadata>
 </root>
