--- a/PerpetualUpdater/Form1.resx
+++ b/PerpetualUpdater/Form1.resx
@@ -338,4 +338,7 @@
         DJxG0QzxEb8VBLwKwOqX+eOjvcbOSGAo9P8B+VxqF2bEvRUAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>231, 17</value>
+  </metadata>
 </root>
