--- a/WolfPaw ScreenSnip/Form1.resx
+++ b/WolfPaw ScreenSnip/Form1.resx
@@ -303,10 +303,22 @@
   <metadata name="pageSetupDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>319, 17</value>
   </metadata>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>471, 17</value>
+  </metadata>
   <metadata name="ni_Notify.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>568, 17</value>
   </metadata>
   <metadata name="cms_Notify.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>668, 17</value>
   </metadata>
+  <data name="pb_Q.ToolTip" xml:space="preserve">
+    <value>Tooltips on/off
+----------------
+Turns the displaying of tooltips on
+or off for the main controls of the program
+
+For the tooltips for cutout controls, please
+go to the settings and turn on "Show Tooltips on cutout controls"</value>
+  </data>
 </root>
